--- a/styles/global.scss
+++ b/styles/global.scss
@@ -62,6 +62,10 @@ img {
     padding-bottom: 20px;
 }
 
+.left-padding {
+    padding-left: 20%;
+}
+
 .pink-container {
     background-color: #d89aad;
     border-radius: 10px;
@@ -214,6 +218,69 @@ footer {
     }
 }
 
+.yellow-gradient {
+    border-radius: 20px;
+    background-size: 300% 300%;
+    background-image: linear-gradient(-45deg, yellow 0%, yellow 25%, yellow 51%, #ff357f 100%);
+    -webkit-animation: AnimateBG 20s ease infinite;
+            animation: AnimateBG 20s ease infinite;
+  }
+  
+  @-webkit-keyframes AnimateBG {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
+  @keyframes AnimateBG {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+
+.green-gradient {
+    border-radius: 20px;
+    background-size: 300% 300%;
+    background-image: linear-gradient(-45deg, #008b8b 0%, #008b8b 25%, #008b8b 40%, #ff357f 100%);
+    -webkit-animation: AnimateBG 20s ease infinite;
+            animation: AnimateBG 20s ease infinite;
+}
+  
+  @-webkit-keyframes AnimateBG {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+}
+  
+  @keyframes AnimateBG {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+}
 
 @media (max-width: 768px) {
     .header-message p {
