--- a/styles/global.scss
+++ b/styles/global.scss
@@ -170,8 +170,7 @@ img {
 }
 
 .modal-label {
-  position: sticky;
-  top: 0;
+  vertical-align: top;
   font-size: 12px !important;
   padding-bottom: 5px;
 }
